# MotionDetection

./: .gitignore  CMakeLists.txt  Readme.md
cfg/: motionDetectionConfig.ini
doc/: CMakeLists.txt  Doxyfile.in
exp/testBenchForTestFunctions/: FrameDifferencetestCoordinates.txt  MOG2CPUtestCoordinates.txt  MOG2GPUtestCoordinates.txt
inc/: configParser.h  customDataTypes.h  imageUtils.h  motionDetection.h  signalHandler.h
src/: configParser.cpp  customDataTypes.cpp  imageUtils.cpp  motionDetection.cpp  signalHandler.cpp
test/: CMakeLists.txt  _testRunner.cpp  motionDetectionTest.cpp  motionDetectionTestConfig.ini  runtest.sh  testClasses.cpp  testClasses.h
